--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
@@ -6,7 +6,7 @@
 @model Collection<ApiDescription>
 
 @{
-    ViewBag.Title = "API Help Page";
+    ViewBag.Title = "Download Help Page";
 
     // Group APIs by controller
     ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
