--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿@using Kartverket.Geonorge.Download.Helpers
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -41,6 +42,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Kartverket</p>
+            <p>Versjon @Html.ApplicationVersionNumber()</p>
         </footer>
     </div>
 
