Added GeoNorge styles

--- a/Kartverket.Geonorge.Download/Views/Home/Index.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
-﻿<div class="jumbotron">
-    Kartverket.GeoNorge.Download
-</div>
+﻿
+
 <div class="row">
-    <div class="col-md-12">
-     API for download service  
-    </div>
+
+
+    <h1>Kartverket.Geonorge.Download</h1>
+    <p class="lead" style="font-size:18px">@Html.ActionLink("API", "Index", "Help", new { area = "" }, null) for download service</p>
+
     
 </div>
