Added GeoNorgeUrl as variable

--- a/Kartverket.Geonorge.Download/Views/Shared/_NavbarPartial.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_NavbarPartial.cshtml
@@ -18,7 +18,7 @@
             </tbody>
         </table>
         <div class="navbar-header">
-            <a class="navbar-title" href="http://prototype.dev.geonorge.no/Geonorge/">
+            <a class="navbar-title" href="@Html.GeonorgeUrl()">
                 <div class="navbar-headline"><strong>Geonorge</strong></div>
                 <div class="navbar-subline"></div>
             </a>
