--- a/Kartverket.Geonorge.Download/Views/Shared/Error.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/Error.cshtml
@@ -1,17 +1,14 @@
-﻿@{
-    Layout = null;
+﻿@model System.Web.Mvc.HandleErrorInfo
+
+@{
+    ViewBag.Title = "Feil";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
-</head>
-<body>
-    <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
-    </hgroup>
-</body>
-</html>
+<h1 class="text-danger">Feil</h1>
+<p>Det har desverre skjedd en feil med din forespørsel. Prøv igjen om litt.</p>
+@if (HttpContext.Current.IsCustomErrorEnabled)
+{
+    <p>Feilmelding: @Model.Exception.Message</p>
+}
+<p>Feilen er logget og vil sjekkes av systemansvarlig.</p>
+<p>Du kan også rapportere feilen til <a href="mailto:@System.Web.Configuration.WebConfigurationManager.AppSettings["WebmasterEmail"]">@System.Web.Configuration.WebConfigurationManager.AppSettings["WebmasterEmail"]</a>.</p>
