--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
@@ -25,8 +25,34 @@
         <div class="content-wrapper">
             <h2>Introduction</h2>
             <p>
-                Download Api
+                A client will start by calling the capabilities (<a href="/Help/Api/GET-api-capabilities-metadataUuid">api/capabilities/{metadataUuid}</a>) this is the root API call for a dataset.
+                Capabilities will announce the rest of the resources with links (href) and relation (rel).
             </p>
+                <table class="help-page-table">
+                    <thead>
+                        <tr><th>Relation (rel)</th><th>Description</th></tr>
+                    </thead>
+                    <tbody>
+                        
+                            <tr>
+                                <td>http://rel.geonorge.no/download/projection</td>
+                                <td>Announce where(href) to get a list of supported projections for a dataset</td>
+                            </tr>
+                        <tr>
+                            <td>http://rel.geonorge.no/download/format</td>
+                            <td>Announce where(href) to get a list of supported formats for a dataset</td>
+                        </tr>
+                        <tr>
+                            <td>http://rel.geonorge.no/download/area</td>
+                            <td>Announce where(href) to get a list of supported areas for a dataset</td>
+                        </tr>
+                        <tr>
+                            <td>http://rel.geonorge.no/download/order</td>
+                            <td>Announce where(href) to post the order for a dataset</td>
+                        </tr>
+                        </tbody>
+                        </table>
+            
         </div>
     </section>
     <section class="content-wrapper main-content clear-fix">
