--- a/Kartverket.Geonorge.Download/Views/Home/Index.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Home/Index.cshtml
@@ -1,10 +1,21 @@
 ﻿
 
-<div class="row">
+
+    <section class="heading">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1>
+                    Nedlasting API
+                </h1>
+            </div>
+            <div class="col-sm-12">
+                <span class="separator-lg"></span>
+            </div>
+        </div>
+    </section>
 
 
-    <h1>Kartverket.Geonorge.Download</h1>
-    <p class="lead" style="font-size:18px">@Html.ActionLink("API", "Index", "Help", new { area = "" }, null) for download service</p>
+    <p class="lead" style="font-size:18px">Se @Html.ActionLink("dokumentasjon for nedlasting API", "Index", "Help", new { area = "" }, null)</p>
 
     
-</div>
+
