--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
     {
         <meta name="description" content="@ViewBag.MetaDescription" />
     }
-    <link rel="shortcut icon" type="image/x-icon" href="/Content/img/favicon.ico" />
-    <link rel="apple-touch-icon-precomposed" href="/Content/img/logo-graphic-512.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="@Html.KartkatalogenUrl()Content/img/favicon.ico" />
+
 
     <title>
         @ViewBag.Title
@@ -18,85 +18,92 @@
         {
             <text> - </text>
         }
-        Download
+        Nedlasting
     </title>
-    @RenderSection("head", false)
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", false)
+    <!-- Fonts -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,700" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,700" rel="stylesheet" type="text/css">
+
+    <!-- Stylesheets -->
+    @Styles.Render(@Html.KartkatalogenUrl() + "bundles/shared-menu-styles")
+    @Styles.Render(@Html.KartkatalogenUrl() + "Content/css")
+    @Styles.Render(@Html.KartkatalogenUrl() + "Content/shopping-cart")
+
+    <!-- Scripts -->
+    @Scripts.Render(@Html.KartkatalogenUrl() + "bundles/shared-menu-scripts")
+    @Scripts.Render(@Html.KartkatalogenUrl() + "bundles/js")
+    @Scripts.Render(@Html.KartkatalogenUrl() + "bundles/shopping-cart")
 
 </head>
 
-<body class="geonorge-container prototype  geonorge">
+<body class="geonorge-container prototype  geonorge ng-scope" ng-app="geonorge">
 
-    <div id="logo-on-sm">
-        <img src="/Content/img/kvlogo_col.png" alt="Kartverkets logo" />
-    </div>
-
-    @Html.Partial("_NavbarPartial")
+    @Html.Partial("_SharedMenu")
 
     <div class="body-content">
-
-        <div class="container">
-
-            @if (TempData["success"] != null)
-            {
-                <div class="alert alert-success">
-                    @TempData["success"]
-                </div>
-            }
-            @if (TempData["failure"] != null)
-            {
-                <div class="alert alert-danger">
-                    @TempData["failure"]
-                </div>
-            }
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <!--<div id="loading">
-                    <img id="loading-image" src="/Content/img/loader.gif" alt="Laster..." />
-                </div>-->
-                @RenderBody()
-            </div>
+        <div class="container container-breadcrumbs" id="navTabCont">
+            <ul class="breadcrumbs col-md-12">
+                <li><a href="@Html.GeonorgeUrl()">Geonorge</a></li>
+                <li><a href="/">Nedlasting</a></li>
+                @RenderSection("breadcrumb", false)
+            </ul>
         </div>
 
+        @if (TempData["success"] != null)
+            {
+            <div class="alert alert-success">
+                @TempData["success"]
+            </div>
+        }
+        @if (TempData["failure"] != null)
+            {
+            <div class="alert alert-danger">
+                @TempData["failure"]
+            </div>
+        }
+
+        <div class="body-content">
+            <div class="container">
+                @RenderBody()
+            </div>
+
+        </div>
 
     </div>
-    <footer class="page-footer" role="contentinfo">
-        <div class="top-shadow">&nbsp;</div>
+    <footer class="page-footer">
+        <div class="container container-footer">
+            <div>
+                <div class="block editorialblock col-md-12 col-lg-4  ">
 
-        <div class="container padding-bottom">
-            <div class="row">
+                    <p><img alt="" src="@Html.KartkatalogenUrl()Content/img/geonorge.png" height="87" width="381" /></p>
+                    <small>Versjon @Html.ApplicationVersionNumber()</small>
 
-                <div class="col-sm-3 col-xs-12">
-                    <div>
-                        <h1 class="heading">Kontakt oss</h1>
-                        <p>Tlf. 08700</p>
-                        <p>post@norgedigitalt.no</p>
-                    </div>
-                </div>
-                <div class="col-xs-12 visible-xs">&nbsp;</div>
-                <div class="col-sm-2 col-sm-offset-7 col-xs-12">
-                    <div class="">
-                        <p>© 2014 - Kartverket</p>
-                        <p>Versjon @Html.ApplicationVersionNumber()</p>
-                        <!--<p><a href="/Om-Kartverket/Personvern-og-cookies/"> Personvern og cookies </a></p>-->
-                        <!--
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            foreach (var c in System.Security.Claims.ClaimsPrincipal.Current.Claims)
-                            {
-                                <p>@c.Type = @c.Value</p>
-                            }
-                        }
-                        -->
+                    <ul class="editorialblock-list-item"></ul>
+                </div><div class="block editorialblock col-md-12 col-lg-4  ">
 
+                    <h2>Om nettstedet:</h2>
 
-                    </div>
+                    <ul class="editorialblock-list-item">
+                        <li>
+                            <a href="@Html.GeonorgeUrl()informasjon/om-geonorge/">Om Geonorge</a>
+                        </li>
+                        <li>
+                            <a href="@Html.GeonorgeUrl()informasjon/aktuelt/annet/personvern-og-bruk-av-cookies/">Personvern og bruk av cookies</a>
+                        </li>
+                    </ul>
+                </div><div class="block editorialblock col-md-12 col-lg-4  ">
+
+                    <h2>Kontakt</h2>
+                    <p><span style="font-family: 'Open Sans', sans-serif; font-size: 22px;">Telefon: 08700<br /></span>Fra utlandet: +47 32 11 81 21<br /><a title="post@geonorge.no" href="mailto:post@geonorge.no">post@geonorge.no</a><br />Org. nr.: 971 040 238</p>
+                    <hr />
+                    <p>En løsning fra</p>
+                    <p><img alt="" src="@Html.KartkatalogenUrl()Content/img/kartverket.png" height="75" width="195" /></p>
+                    <ul class="editorialblock-list-item"></ul>
                 </div>
             </div>
         </div>
     </footer>
+
+
 </body>
 </html>
