--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
@@ -11,7 +11,9 @@
     // Group APIs by controller
     ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
 }
-
+@section breadcrumb {
+    <li class="active">API hjelp</li>
+}
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
 <header class="help-page">
     <div class="content-wrapper">
