--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Api.cshtml
@@ -9,6 +9,7 @@
 
 @section breadcrumb {
     <li>@Html.ActionLink("API hjelp", "Index")</li>
+    <li>@description.HttpMethod.Method  @description.RelativePath</li>
 }
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
