--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
         <div class="container container-breadcrumbs" id="navTabCont">
             <ul class="breadcrumbs col-md-12">
                 <li><a href="@Html.GeonorgeUrl()">Geonorge</a></li>
-                <li><a href="/">For Utviklere</a></li>
+                <li><a href="@Html.GeonorgeUrl()for-utviklere/">For Utviklere</a></li>
                 <li><a href="/">Nedlasting API</a></li>
                 @RenderSection("breadcrumb", false)
             </ul>
