Update Bower components

--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
 
 <body class="geonorge-container prototype  geonorge ng-scope" ng-app="geonorge">
 
+    <div id="loading-animation" class="loading-animation" style="display: none;"></div>
+
     @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_SharedMenu.min.cshtml")
     <div class="body-content">
         <div class="container container-breadcrumbs" id="navTabCont">
