More documentation version 2 api

--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
@@ -27,7 +27,8 @@
             <h2>Introduction</h2>
             <p>
                 A client will start by calling the capabilities (<a href="/Help/Api/GET-api-capabilities-metadataUuid">api/capabilities/{metadataUuid}</a>) this is the root API call for a dataset.
-                Capabilities will announce the rest of the resources with links (href) and relation (rel).
+                Capabilities will announce the rest of the resources with links (href) and relation (rel).<br />
+                For more info please see <a href="~/Content/Nedlastnings-API-et.doc">Nedlastnings-API-et.doc</a>
             </p>
                 <table class="help-page-table">
                     <thead>
