--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Index.cshtml
@@ -28,7 +28,7 @@
             <p>
                 A client will start by calling the capabilities (<a href="/Help/Api/GET-api-capabilities-metadataUuid">api/capabilities/{metadataUuid}</a>) this is the root API call for a dataset.
                 Capabilities will announce the rest of the resources with links (href) and relation (rel).<br />
-                For more info please see <a href="~/Content/Nedlastnings-API-et.doc">Nedlastnings-API-et.doc</a>
+                For more info implementing api please also see <a href="~/help/documentation">documentation</a>
             </p>
                 <table class="help-page-table">
                     <thead>
