Use Analytics and Tag Manager script from bower component

--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -50,6 +50,7 @@
 
     <div id="loading-animation" class="loading-animation" style="display: none;"></div>
 
+    @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_Analytics.min.cshtml")
     @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_SharedMenu.min.cshtml")
     <div class="body-content">
         <div class="container container-breadcrumbs" id="navTabCont">
