--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Documentation.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Documentation.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@using Kartverket.Geonorge.Download.Resources
+@{
     ViewBag.Title = "Dokumentasjon nedlastnings-API-et versjon 2";
 }
 @section breadcrumb {
-    <li class="active">API dokumentasjon</li>
+    <li class="active">@UI.ApiDocumentation</li>
 }
 <header class="help-page">
     <div class="content-wrapper">
