--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Kartverket.Geonorge.Download.Helpers
-@using Kartverket.Geonorge.Download.Helpers﻿
+@using Kartverket.Geonorge.Download.Resources
+
 <!DOCTYPE html>
 <html class=" js flexbox no-flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg no-smil svgclippaths">
 <head>
@@ -64,9 +65,9 @@
         <div class="container container-breadcrumbs" id="navTabCont">
             <ul class="breadcrumbs col-md-12">
                 <li><a href="@Html.GeonorgeUrl()">Geonorge</a></li>
-                <li><a href="@Html.GeonorgeUrl()for-utviklere/">For utviklere</a></li>
-                <li><a href="@Html.GeonorgeUrl()for-utviklere/APIer-og-grensesnitt/">API-er og grensesnitt</a></li>
-                <li><a href="/">Nedlasting API</a></li>
+                <li><a href="@Html.GeonorgeUrl()for-utviklere/">@UI.ForDevelopers</a></li>
+                <li><a href="@Html.GeonorgeUrl()for-utviklere/APIer-og-grensesnitt/">@UI.APIsAndInterfaces</a></li>
+                <li><a href="/">@UI.DownloadAPI</a></li>
                 @RenderSection("breadcrumb", false)
             </ul>
         </div>
