Change breadcrumb help

--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                 <li><a href="@Html.GeonorgeUrl()">Geonorge</a></li>
                 <li><a href="@Html.GeonorgeUrl()for-utviklere/">@UI.ForDevelopers</a></li>
                 <li><a href="@Html.GeonorgeUrl()for-utviklere/APIer-og-grensesnitt/">@UI.APIsAndInterfaces</a></li>
-                <li><a href="/">@UI.DownloadAPI</a></li>
+                <li><a href="@Html.GeonorgeUrl()for-utviklere/APIer-og-grensesnitt/nedlastingsapiet/">@UI.DownloadAPI</a></li>
                 @RenderSection("breadcrumb", false)
             </ul>
         </div>
